<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding"
    tools:context="fragments.Dipping">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallMargin"
        android:id="@+id/tv"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/tank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/smallPadding"
            android:layout_margin="@dimen/smallMargin"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dip"
            android:layout_margin="@dimen/smallMargin"
            android:id="@+id/mTankView"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/dipping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/smallPadding"
            android:layout_margin="@dimen/smallMargin"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dip"
            android:layout_margin="@dimen/smallMargin"
            android:id="@+id/dipValue"
            android:layout_weight="2"
            android:maxLines="1"
            android:maxLength="7"
            android:inputType="number|numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/water"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/smallPadding"
            android:layout_margin="@dimen/smallMargin"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dip"
            android:layout_margin="@dimen/smallMargin"
            android:id="@+id/waterValue"
            android:layout_weight="2"
            android:maxLines="1"
            android:maxLength="7"
            android:inputType="number|numberDecimal" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="@string/submit"/>
</LinearLayout>

</FrameLayout>
