<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding"
    tools:context="fragments.Tanking">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/smallMargin"
            android:id="@+id/tv"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/tank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normalText"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/smallPadding"
                android:layout_margin="@dimen/smallMargin" />

        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="8dip"
            android:layout_margin="@dimen/smallMargin"
            android:id="@+id/mTankView"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:layout_margin="@dimen/smallMargin"
                android:id="@+id/preTank"
                android:layout_weight="2"
                android:maxLines="1"
                android:maxLength="7"
                android:hint="@string/pretank"
                android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--<TextView-->
                <!--android:text="@string/posttank"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:padding="@dimen/smallPadding"-->
                <!--android:layout_margin="@dimen/smallMargin"-->
                <!--android:layout_weight="1" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:hint="@string/posttank"
                android:layout_margin="@dimen/smallMargin"
                android:id="@+id/postTank"
                android:maxLines="1"
                android:maxLength="7"
                android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--<TextView-->
                <!--android:text="@string/theoritical"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:padding="@dimen/smallPadding"-->
                <!--android:layout_margin="@dimen/smallMargin"-->
                <!--android:layout_weight="1" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:hint="@string/theoritical"
                android:layout_margin="@dimen/smallMargin"
                android:id="@+id/theoretical"
                android:maxLines="1"
                android:maxLength="7"
                android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--<TextView-->
                <!--android:text="@string/delivered"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:padding="@dimen/smallPadding"-->
                <!--android:layout_margin="@dimen/smallMargin"-->
                <!--android:layout_weight="1" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:hint="@string/delivered"
                android:layout_margin="@dimen/smallMargin"
                android:id="@+id/delivered"
                android:maxLines="1"
                android:maxLength="7"
                android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--<TextView-->
                <!--android:text="@string/water"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:padding="@dimen/smallPadding"-->
                <!--android:layout_margin="@dimen/smallMargin"-->
                <!--android:layout_weight="1" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:hint="@string/water"
                android:layout_margin="@dimen/smallMargin"
                android:id="@+id/waterValue"
                android:maxLines="1"
                android:maxLength="7"
                android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--<TextView-->
                <!--android:text="@string/numberplate"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_vertical"-->
                <!--android:padding="@dimen/smallPadding"-->
                <!--android:layout_margin="@dimen/smallMargin"-->
                <!--android:layout_weight="1" />-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:hint="@string/numberplate"
                android:layout_margin="@dimen/smallMargin"
                android:id="@+id/numberPlate"
                android:maxLines="1"
                android:maxLength="7"
                android:textAllCaps="true"
                android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit"
            android:text="@string/submit"/>
    </LinearLayout>

</FrameLayout>
